--- a/styles/about-product.css
+++ b/styles/about-product.css
@@ -340,7 +340,7 @@ input[type="radio"]:checked {
     width: 100%;
     height: 407px;
     mix-blend-mode: multiply;
-    background-image: url(./images/product-support-2.png);
+    background-image: url(../images/product-support-2.png);
     background-position: right top;
     bottom: 0%;
 
