--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,10 @@ input {
 
 }
 
+button {
+    cursor: pointer;
+}
+
 ul {
     list-style: none;
 }
@@ -102,6 +106,19 @@ h6 {
     font-size: 14px;
     color: rgba(255, 255, 255, 0.5);
     padding-bottom: 20px;
+
+}
+
+del {
+    font-weight: 400px;
+    font-size: 14px;
+    color: var(--gray);
+}
+
+strong {
+    font-weight: 600;
+    font-size: 18px;
+    padding-bottom: 20PX;
 
 }
 
@@ -699,18 +716,8 @@ address {
     transform: scale(1.1);
 }
 
-del {
-    font-weight: 400px;
-    font-size: 14px;
-    color: var(--gray);
-}
 
-strong {
-    font-weight: 600;
-    font-size: 18px;
-    padding-bottom: 20PX;
 
-}
 
 
 .stock-cards>img {
@@ -797,7 +804,7 @@ strong {
 }
 
 .series-list {
-    padding-bottom: 23px;
+    padding: 35px 0 23px;
 }
 
 
@@ -852,6 +859,7 @@ strong {
     background-image: url(../images/custome-builds-1.png);
     background-repeat: no-repeat;
 
+
 }
 
 .bg-img-two {
@@ -876,14 +884,26 @@ strong {
 
 }
 
+.Msi_series,
+.Descktop_series,
+.msi_laptop_series,
+.custom_build_series {
+    height: 346px;
+
+}
+
+.Msi_series {
+    padding-top: 31px;
+}
 
 .brands {
     display: flex;
     align-items: flex-end;
-    height: 79px;
+
     padding-bottom: 50px;
     padding-top: 10px;
     margin-top: 66px;
+
 }
 
 .bg-hovr {
