--- a/styles/about-product.css
+++ b/styles/about-product.css
@@ -69,7 +69,7 @@ strong {
     border-bottom: 1px solid rgba(0, 0, 0, 0.297);
 }
 
-.check-bttn {
+.check-buttn {
     width: 151px;
     height: 50px;
 }
@@ -452,4 +452,18 @@ input[type="radio"]:checked {
 
 .card>img {
     padding: 0 59px 28px 59px;
+}
+
+.hidden-minicart {
+    display: none;
+    position: absolute;
+    height: 511px;
+    width: 310px;
+    background: var(--white);
+    box-shadow: 5px 10px 18px #888888;
+    right: -70px;
+
+    z-index: 555;
+
+
 }
