--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,10 @@ nav {
     padding: 8px 0;
 }
 
+a {
+    cursor: pointer;
+}
+
 form {
     margin-top: 71px 0 47px;
 }
@@ -155,6 +159,10 @@ strong {
 .bg-black {
     background-color: var(--bg-black);
     color: var(--white);
+}
+
+.dis-block {
+    display: block;
 }
 
 .header_top {
@@ -436,6 +444,180 @@ address {
 
 }
 
+.hidden-minicart {
+    display: none;
+    position: absolute;
+    height: 511px;
+    width: 310px;
+    background: var(--white);
+    box-shadow: 5px 10px 18px #888888;
+    right: -70px;
+
+    z-index: 555;
+
+
+}
+
+
+
+.checked {
+    position: relative;
+
+}
+
+.checked:hover>.hidden-minicart {
+    display: block;
+
+}
+
+.my-cart {
+    font-weight: 600;
+    font-size: 18px;
+    text-align: center;
+    margin: 0 auto;
+    padding: 23px 0 6px;
+}
+
+.item-cart {
+    font-size: 12px;
+    font-weight: 400;
+    color: rgba(162, 166, 176, 1);
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+.view-bttn {
+
+    width: 250px;
+    height: 38px;
+
+    margin: 25px 0px 25px 25px;
+    background-color: var(--white);
+    color: var(--blue);
+    border: 2px solid var(--blue);
+    border-radius: 50px;
+    padding: 10px 70px;
+    font-weight: 600;
+    font-size: 12px;
+    text-align: center;
+
+
+
+}
+
+.hidden-table {
+    border-top: 1px solid rgba(202, 205, 216, 1);
+    border-bottom: 1px solid rgba(202, 205, 216, 1);
+    padding: 17px 15px 23px 24px;
+    width: 310px;
+
+}
+
+.hidden-table:first-of-type {
+    margin-top: 25px;
+}
+
+.hidden-icon {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.hidden-one {
+    font-weight: 400;
+    font-size: 18px;
+}
+
+.font-14 {
+    font-size: 14px;
+}
+
+.hidden-minicart-info {
+    font-size: 13px;
+    font-weight: 400;
+    max-width: 153px;
+}
+
+.sutotal {
+    font-weight: 600;
+    font-size: 14px;
+    text-align: center;
+    padding: 16px 0 13px;
+}
+
+.black-strong {
+    color: var(--black);
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.yellow-check {
+    background: rgba(255, 184, 0, 1);
+    color: rgba(35, 44, 101, 1);
+    font-size: 12px;
+    width: 250px;
+    height: 37px;
+    text-align: center;
+    font-weight: 600;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+.check-bttn {
+    color: var(--white);
+    background-color: var(--blue);
+    width: 250px;
+    height: 37px;
+    font-weight: 600;
+    font-size: 14px;
+    padding: 8px 70px;
+    border-radius: 50px;
+    margin: 13px 30px 7px;
+}
+
+.margn {
+    margin: 10px 30px 0px;
+}
+
+.hidden-informations {
+    height: 190.84402465820312px;
+    width: 232px;
+    background: var(--white);
+    display: none;
+    position: absolute;
+    padding: 15px 30px 30px 20px;
+    top: 40px;
+    border: 1px solid rgba(202, 205, 216, 1);
+    right: -58px;
+
+
+}
+
+.account-link {
+    font-weight: 500;
+    font-size: 14px;
+
+    color: var(--bg-black);
+}
+
+.account-list {
+    padding-bottom: 10px;
+}
+
+.Personal-informations-account {
+    position: relative;
+    width: 30px;
+
+}
+
+.Personal-informations-account:hover .hidden-informations {
+    display: block;
+
+
+}
 
 .client-actions {
     display: flex;
@@ -577,7 +759,7 @@ address {
 .card-reviews::before {
     position: absolute;
     content: "";
-    background-image: url(./images/stars.png);
+    background-image: url(../images/stars.png);
     background-repeat: no-repeat;
     background-position: left center;
     left: 0;
@@ -698,6 +880,8 @@ address {
 
 }
 
+
+
 .shop-basket {
     transform: translate(-5px, 4px);
 }
@@ -731,10 +915,14 @@ address {
 }
 
 
+
+
+
 .fix-scrl {
     position: fixed;
     right: 30px;
     bottom: 0;
+    z-index: 555;
 
 
 }
@@ -890,7 +1078,9 @@ address {
 .custom_build_series {
     height: 346px;
 
+
 }
+
 
 .Msi_series {
     padding-top: 31px;
