--- a/styles/Dashboard.css
+++ b/styles/Dashboard.css
@@ -12,6 +12,10 @@ h4 {
     gap: 81px;
 }
 
+.dashboard-heading {
+    padding-bottom: 31px;
+}
+
 .information a {
     font-weight: 300;
     font-size: 14px;
@@ -77,6 +81,7 @@ h4 {
     text-align: center;
     padding: 20px 22px 21px;
     height: 118px;
+    width: 327px;
 }
 
 .compare {
