--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -1,3 +1,7 @@
+main {
+    overflow: hidden;
+}
+
 h2 {
     font-weight: 600;
     font-size: 18px;
@@ -14,6 +18,12 @@ aside {
     margin-top: 59px;
 
 
+}
+
+.flx {
+    display: flex;
+    gap: 20px;
+    align-items: center;
 }
 
 .shipping {
@@ -37,18 +47,9 @@ aside {
 
 }
 
-.flx {
-    gap: 18px;
 
 
-}
 
-.ranges-flx {
-    display: flex;
-    flex-wrap: wrap;
-
-
-}
 
 .align-slf {
     display: flex;
@@ -90,17 +91,16 @@ aside {
 }
 
 
-.flX {
+
+.ranges-flx {
     display: flex;
-    gap: 586px;
 }
-
-
 
 .blue-radius {
     border: 2.5px solid rgba(1, 86, 255, 1);
     position: relative;
-    margin-left: 10px;
+    margin-right: 150px;
+
 
 
 }
@@ -132,7 +132,7 @@ aside {
 .gray-radius {
     border: 2.5px solid rgba(202, 205, 216, 1);
     position: relative;
-    margin-left: 160px;
+    margin-right: 100px;
     width: 43px;
     height: 43px;
 
@@ -140,10 +140,20 @@ aside {
 
 .black-colr {
     color: var(--black);
+    position: relative;
+    right: 10px;
+    top: 5px;
+
+
 }
 
 .gray-colr {
     color: var(--gray);
+    position: relative;
+    right: 50px;
+    top: 5px;
+
+
 }
 
 .range-p {
@@ -152,15 +162,11 @@ aside {
 
 
 
-}
-
-.flx-End {
-    display: flex;
-    gap: 78px;
-    align-items: flex-end;
 
 
 }
+
+
 
 .input {
     width: 565px;
@@ -229,10 +235,8 @@ strong {
     margin-top: 10px;
 }
 
-
-.bg-blue {
-    background-color: var(--blue);
-    color: var(--white);
+.checkout-form input[type="submit"] {
+    width: 210px;
     margin: 21px 0 87px;
 }
 
@@ -253,4 +257,8 @@ strong {
     top: 23px;
     left: 98%;
 
+}
+
+.select-two {
+    padding: 16px 0 22px;
 }
