--- a/styles/series.css
+++ b/styles/series.css
@@ -2,6 +2,11 @@
     margin-bottom: 35px;
 }
 
+
+.breadcrumbs {
+    padding-bottom: 10px;
+}
+
 .stock-cards {
     height: 410px;
     width: 235px;
